--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="container mx-3 px-3 py-3">
         <div>
             <h1 class="pl-3 mt-5" style="color: rgba(255, 255, 255, .8)">Coin Center</h1>
-            <h6 class="container justify-content-center text-light pl-4">Powered by <a href="https://www.coingecko.com/">CoinGecko</a></h6>
+            <h6 class="container justify-content-center text-light pl-4">Powered by <a href="https://www.coingecko.com/" style="z-index: 4;">CoinGecko</a></h6>
             <h1 class="pl-3" style="position: absolute; top: 135px; color: rgba(255, 255, 255, .8)">_________________</h1>
         </div>
         <div class="d-flex fd-row">
