--- a/about.html
+++ b/about.html
@@ -8,13 +8,14 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.0/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 <link rel="stylesheet" href="assets/css/style.css">
+<link rel="stylesheet" href="main.css">
 
 <title>CoinTrax - A Brand You Can Trust</title>
 </head>
 <body class="bg-dark">
-    <nav class="navbar navbar-dark bg-dark navbar-expand-lg py-3 fixed-top shadow">
+    <nav class="navbar navbar-light bg-light navbar-expand-lg py-3 fixed-top shadow">
         <div class="container">
-            <a href="#" class="navbar-brand">CoinTrax<small class="text-muted"><h6>We Track Coins</h6></small></a>
+            <a href="#" class="navbar-brand">Crypto Beat<small class="text-muted"><h6>Live Price Data</h6></small></a>
             <button
                 class="navbar-toggler"
                 type="button"
@@ -36,9 +37,10 @@
             </div>
         </div>
     </nav>
-    <div class="container p-5 m-3">
-        <div class="container"></div>
+    <div class="container py-3">
+        <div class="container py-3"></div>
     </div>
+    <img src="static/under_construction.jpg" alt="An Under Construction Sign" class="bg-img">
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.0/js/bootstrap.min.js"></script>
