--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 <title>CoinTrax - A Brand You Can Trust</title>
 </head>
 <body class="bg-dark">
-    <nav class="navbar navbar-light bg-light navbar-expand-lg py-3 fixed-top shadow">
+    <nav class="navbar navbar-dark bg-dark navbar-expand-lg py-3 fixed-top shadow">
         <div class="container">
             <a href="#" class="navbar-brand">Crypto Beat<small class="text-muted"><h6>Live Price Data</h6></small></a>
             <button
