--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
             
                 </div>
             </div>
+            <div class="text-center pt-2">
+                <h6 class="update-cap text-light"></h6>
+            </div>
         
         </div>
     </div>
@@ -85,7 +88,7 @@
                 </ul>
             </div>
             <div class="mt-2 scrollbar col-lg-8 col-12 coin-box" style="min-height: 485px;">
-                <table class="table shadow">
+                <table class="table">
                     <thead style="position: sticky;top: 0;" class="bg-dark">
                         <tr>
                             <th class="header text-light" scope="col">Icon</th>
@@ -97,7 +100,6 @@
                     </thead>
                     <tbody class="coin-list rounded">
                     </tbody>
-                    </div>
                 </table>
             </div>
         </div>
